--- a/Easy English Alphabet/Easy English Alphabet Embedded.vbproj
+++ b/Easy English Alphabet/Easy English Alphabet Embedded.vbproj
@@ -17,6 +17,8 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <IsWebBootstrapper>false</IsWebBootstrapper>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -32,8 +34,6 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -83,36 +83,33 @@
   <PropertyGroup>
     <SignManifests>false</SignManifests>
   </PropertyGroup>
-<PropertyGroup>
-  <ApplicationIcon>easy_alphabet.ico</ApplicationIcon> <!-- Optional: ceremonial icon -->
-</PropertyGroup>
-
-<ItemGroup>
-  <!-- Local PowerPacks reference -->
-  <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-    <SpecificVersion>False</SpecificVersion>
-    <HintPath>.\Microsoft.VisualBasic.PowerPacks.Vs.dll</HintPath>
-  </Reference>
-
-  <!-- NAudio reference from local lib folder -->
-  <Reference Include="NAudio, Version=1.8.0.0, Culture=neutral, processorArchitecture=MSIL">
-    <HintPath>lib\NAudio.dll</HintPath>
-    <Private>True</Private>
-  </Reference>
-
-  <!-- Full framework references -->
-  <Reference Include="System" />
-  <Reference Include="mscorlib" />
-  <Reference Include="System.Data" />
-  <Reference Include="System.Deployment" />
-  <Reference Include="System.Drawing" />
-  <Reference Include="System.Windows.Forms" />
-  <Reference Include="System.Xml" />
-  <Reference Include="System.Core" />
-  <Reference Include="System.Xml.Linq" />
-  <Reference Include="System.Data.DataSetExtensions" />
-</ItemGroup>
-
+  <PropertyGroup>
+    <ApplicationIcon>easy_alphabet.ico</ApplicationIcon>
+    <!-- Optional: ceremonial icon -->
+  </PropertyGroup>
+  <ItemGroup>
+    <!-- Local PowerPacks reference -->
+    <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\Microsoft.VisualBasic.PowerPacks.Vs.dll</HintPath>
+    </Reference>
+    <!-- NAudio reference from local lib folder -->
+    <Reference Include="NAudio, Version=1.8.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>lib\NAudio.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <!-- Full framework references -->
+    <Reference Include="System" />
+    <Reference Include="mscorlib" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+  </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
     <Import Include="System" />
